add ddd pattern codes.